# openpose_ros

./: CMakeLists.txt
src/: openpose_ros_node.cpp
